--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,6 +1,8 @@
-//@import "../../node_modules/antd/dist/antd.less";
+@import "../../node_modules/antd/dist/antd.less";
+@import "./login.less";
 // @import "your-theme-file"; // 用于覆盖上面定义的变量
 //@import "../../node_modules/antd/dist/antd.less";
+//@base: #f938ab;
 .editable-cell {
     position: relative;
 }
