--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,8 +1,6 @@
-@import "../../node_modules/antd/dist/antd.less";
+//@import "../../node_modules/antd/dist/antd.less";//已改为按需加载less，不需要引入所有less
 @import "./login.less";
 // @import "your-theme-file"; // 用于覆盖上面定义的变量
-//@import "../../node_modules/antd/dist/antd.less";
-//@base: #f938ab;
 .editable-cell {
     position: relative;
 }
