--- a/src/less/main.less
+++ b/src/less/main.less
@@ -47,6 +47,7 @@
   background: #fbfbfb;
   border: 1px solid #d9d9d9;
   border-radius: 6px;
+  margin-bottom:10px;
 }
 
 .ant-advanced-search-form .ant-form-item {
